feat: add-database

--- a/NCKH_Laptop/appsettings.json
+++ b/NCKH_Laptop/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-SKTO6KP\\SQLEXPRESS; Database=NCKH_Laptop; User Id=sa; Password=Dung@13; Trusted_Connection=True; MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "EmailSettings": {
+    "Email": "nguyenvandung01052002@gmail.com",
+    "Password": "ifbmyzwazpeudker"
   },
   "AllowedHosts": "*"
 }
